Перенесены чувствительные данные

--- a/sqlite_to_postgres/.env_example
+++ b/sqlite_to_postgres/.env_example
@@ -1,8 +1,9 @@
 SQLITE_FILE=db.sqlite
-SQLITE_TABLE=person_film_work
-SQLITE_COLUMNS=id,film_work_id,person_id,role,created_at
 
-LIMIT=100
+LIMIT=27
 
-PG_TABLE=person_film_work
-PG_COLUMNS=id,film_work_id,person_id,role,created
+DB_NAME=movies_database
+DB_USER=app
+DB_PASSWORD=123qwe
+DB_HOST=127.0.0.1
+DB_PORT=5432
